--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "jsonwebtoken": "8.5.1",
     "lodash": "4.17.15",
     "method-override": "3.0.0",
+    "minimist": "^1.2.5",
     "mongoose": "5.8.11",
     "node-uuid": "1.4.8",
     "passport": "0.4.1",
